

[package]
name = "strictjs-runtime"  # Changed to npm-style name
version = "0.1.0"
edition = "2021"
description = "Type-safe JavaScript runtime with WebAssembly - Bringing Rust's safety guarantees to JavaScript"
repository = "https://github.com/yourusername/strictjs-runtime"
license = "MIT"
authors = ["Your Name kennethmburu21@gmail.com"]

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
uuid = { version = "1.0", features = ["v4", "js"] }
web-sys = { version = "0.3", features = ["Window", "Response", "Request", "Headers"] }
futures = "0.3"


[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

